--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,8 +37,19 @@ $success: #7952b3;
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
+@import "../node_modules/bootstrap/scss/card";
+
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 
 // 8. Add additional custom code here
+
+html {
+  font-size : 16px;
+}
+
+a {
+  color: $black;
+  font-weight: 700;
+}
